--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@huggingface/inference": "^4.13.5",
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "append-field": "^1.0.0",
@@ -137,7 +138,6 @@
     "wrappy": "^1.0.2",
     "xtend": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
